fix for bug #185959 Many function(For exam. Reply, Forward) works and leads to crash before user login r=Henry sr=binevenu